link and color added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Resume</title>
     <style>
         h2 {
-            colour: blue;
+            color: blue;
         }
     </style>
 </head>
@@ -47,7 +47,7 @@
 </main>
 <hr>
 <footer>
-    <a target="_blank" href="">instagram</a>
+    <a target="_blank" href="https://first-project-seven-psi.vercel.app">MY WEBSITE</a>
 </footer>
 
 </body>
